rft: project direction
After a few days of development being  completely stuck ive decided to develop the decoder as i need it for the main project

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,15 @@ name = "serde_cbored"
 version = "0.1.0-dev"
 edition = "2024"
 description = "A CBOR codec for the serde framework"
-repository = "https://github.com/itsgerliz/CBORed"
+repository = "https://github.com/PraesidiumApp/serde_cbored"
 license = "BSD-3-Clause"
 keywords = ["cbor", "serde", "codec", "encoding", "format"]
 categories = ["encoding"]
+
+[features]
+ser = []
+de = []
+default = ["ser", "de"]
 
 [dependencies]
 serde = "1.0.228"
